--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,16 @@ services:
     image: dawsh/marzneshin:latest
     restart: always
     env_file: .env
+    environment:
+      SQLALCHEMY_DATABASE_URL: "mariadb+pymysql://root:12341234@127.0.0.1/marzneshin"
     network_mode: host
     volumes:
       - /var/lib/marzneshin:/var/lib/marzneshin
 
+    depends_on:
+      db:
+        condition: service_healthy
+        required: true
   marznode:
     image: dawsh/marznode:latest
     restart: always
@@ -14,10 +20,37 @@ services:
     environment:
       SERVICE_ADDRESS: "127.0.0.1"
       INSECURE: "True"
+      SERVICE_PORT: "2000"
       XRAY_EXECUTABLE_PATH: "/usr/local/bin/xray"
-      XRAY_ASSETS_PATH: "/usr/local/lib/xray"
+      XRAY_ASSETS_PATH: "/var/lib/marznode/assets"
       XRAY_CONFIG_PATH: "/var/lib/marznode/xray_config.json"
       SSL_KEY_FILE: "./server.key"
       SSL_CERT_FILE: "./server.cert"
+      
     volumes:
       - /var/lib/marznode:/var/lib/marznode
+  db:
+    image: mariadb:latest
+    restart: always
+    environment:
+      MARIADB_ROOT_PASSWORD: 12341234
+      MARIADB_DATABASE: marzneshin
+    volumes:
+      - /var/lib/marzneshin/mysql:/var/lib/mysql
+    ports:
+      - "127.0.0.1:3306:3306"
+    healthcheck:
+      test: healthcheck.sh --connect
+      interval: 5s
+      retries: 4
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:latest
+    restart: always
+    env_file: .env
+    network_mode: host
+    environment:
+      PMA_HOST: 127.0.0.1
+      APACHE_PORT: 8012
+      UPLOAD_LIMIT: 1024M
+    depends_on:
+      - db    
